Enhance rate limiting and configuration handling
- Introduced a constant for key resolver suffix to improve code readability in RateLimitRouteCustomizer.
- Refactored key resolver name handling to utilize the new constant, ensuring consistent suffix application.
- Updated string splitting logic in RateLimitRouteCustomizer to handle both underscores and hyphens.
- Removed unused imports in CacheFilter and JwtAuthFilter for cleaner code.
- Simplified DefaultRateLimitConfigResolver by removing unnecessary initialization of an empty list.
- Cleaned up ClientIpKeyResolver by removing redundant semicolon.
- Improved assertions in ApiRegistryClientTest to use JUnit assertions for better clarity and consistency.
- Refactored RateLimitRouteCustomizerTest to consolidate key resolver tests into a single method for better maintainability.
- Updated GatewayMeterFilterTest and HttpClientObservationConventionTest to enhance test readability and structure.
- Cleaned up PluginLoaderSimpleTest to ensure exception handling during initialization and destruction does not throw unexpected errors.
- Removed unused imports in DefaultRateLimitConfigResolverTest and JarUtilsTest for cleaner code.
- Simplified RateLimitConfigController and ApiRoutesHealthMonitor by removing unnecessary imports and improving null checks.
- Updated RateLimitConfigServiceImpl to utilize Java 10's `toList()` for stream collections.
- Enhanced RegistryMetricsConfigTest to improve test assertions and reduce redundancy.
- Cleaned up HttpClientObservationConventionTest to streamline outcome status tests and improve readability.
- Improved ServicesMetricsTest to ensure null event handling does not throw exceptions.
- Updated RateLimitConfigControllerMongoIntegrationTest for better type safety with generic containers.